Laravel e angular correções

--- a/lar_angular/resources/meuapp/src/app/post-dialog/post-dialog.component.html
+++ b/lar_angular/resources/meuapp/src/app/post-dialog/post-dialog.component.html
@@ -1,14 +1,12 @@
 <div fxLayout="column" fxLayoutAlign="space-around left">
   <div fxLayout="row" fxLayoutAlign="space-between">
     <mat-form-field fxFlex="50">
-      <input matInput placeholder="Seu nome"
-        [(ngModel)]="dados.post.nome">
+      <input matInput placeholder="Seu nome" [(ngModel)]="dados.post.nome">
       <mat-hint>Digite aqui seu nome</mat-hint>
     </mat-form-field>
 
     <mat-form-field fxFlex="40">
-      <input matInput placeholder="Seu email"
-        [(ngModel)]="dados.post.email">
+      <input matInput placeholder="Seu email" [(ngModel)]="dados.post.email">
       <mat-hint>Digite aqui seu email</mat-hint>
     </mat-form-field>
   </div>
